--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.20.2
   google_fonts: ^6.3.1
   transparent_image: ^2.0.1
+  flutter_riverpod: ^3.0.0-dev.17
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +49,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  custom_lint:
+  riverpod_lint: ^3.0.0-dev.17
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
