--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^6.3.1
   transparent_image: ^2.0.1
   flutter_riverpod: ^3.0.0-dev.17
+  simple_animations: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+      - images/
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
